@@ -19,7 +19,6 @@ HIGH PRIORITY
 - hack in BottomWire.createShape
 
 MEDUIUM PRIORITY
-- convert DielectricMaterial to Property<T>
 - convert CapacitorNode to Property<T>
 - convert BatteryCapacitorCircuit to Property<T>, BatteryCapacitorCircuitChangeListeners is inefficient/incomplete/incorrect
 - small (100mm^2) capacitor plates look like they are at a 46-degree yaw, instead of 45-degree
