@@ -12,7 +12,6 @@ import edu.colorado.phet.capacitorlab.CLStrings;
 import edu.colorado.phet.capacitorlab.model.Capacitor;
 import edu.colorado.phet.capacitorlab.model.DielectricMaterial;
 import edu.colorado.phet.capacitorlab.model.DielectricMaterial.CustomDielectricMaterial;
-import edu.colorado.phet.capacitorlab.model.DielectricMaterial.CustomDielectricMaterial.CustomDielectricChangeListener;
 import edu.colorado.phet.capacitorlab.module.dielectric.DielectricModel;
 import edu.colorado.phet.capacitorlab.view.CapacitorNode;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
@@ -30,27 +29,24 @@ import edu.colorado.phet.common.phetcommon.view.util.GridPanel.Fill;
 public class DielectricPropertiesControlPanel extends PhetTitledPanel {
     
     private final Capacitor capacitor;
-    private final CustomDielectricChangeListener customDielectricChangeListener;
+    private final SimpleObserver dielectricConstantObserver;
     private final DielectricMaterialControl materialControl;
     private final DielectricConstantControl constantControl;
     private final DielectricChargesControl chargesControl;
     
-    private DielectricMaterial previousMaterial;
+    private DielectricMaterial material;
 
     public DielectricPropertiesControlPanel( DielectricModel model, CapacitorNode capacitorNode ) {
         super( CLStrings.DIELECTRIC );
         
         this.capacitor = model.getCapacitor();
         
-        previousMaterial = capacitor.getDielectricMaterial();
-        customDielectricChangeListener = new CustomDielectricChangeListener() {
-            public void dielectricConstantChanged() {
+        this.material = capacitor.getDielectricMaterial();
+        dielectricConstantObserver = new SimpleObserver() {
+            public void update() {
                 handleDielectricConstantChanged();
             }
         };
-        if ( capacitor.getDielectricMaterial() instanceof CustomDielectricMaterial ) {
-            ((CustomDielectricMaterial) capacitor.getDielectricMaterial() ).addCustomDielectricChangeListener( customDielectricChangeListener );
-        }
         
         materialControl = new DielectricMaterialControl( model.getDielectricMaterials(), model.getCapacitor().getDielectricMaterial() );
         materialControl.addChangeListener( new ChangeListener() {
@@ -85,12 +81,15 @@ public class DielectricPropertiesControlPanel extends PhetTitledPanel {
         setLayout( new BorderLayout() );
         add( innerPanel, BorderLayout.WEST );
         
-        // observer model
+        // observe capacitor
         capacitor.addDielectricMaterialObserver( new SimpleObserver() {
             public void update() {
                 handleDielectricMaterialChanged();
             }
         });
+        
+        // observe dielectric
+        material.addDielectricConstantObserver( dielectricConstantObserver );
     }
     
     private void handleDielectricMaterialChanged() {
@@ -102,14 +101,10 @@ public class DielectricPropertiesControlPanel extends PhetTitledPanel {
         constantControl.setEnabled( material instanceof CustomDielectricMaterial );
         constantControl.setValue( material.getDielectricConstant() );
         
-        // rewire listener for custom material
-        if ( previousMaterial instanceof CustomDielectricMaterial ) {
-            ( (CustomDielectricMaterial) previousMaterial ).addCustomDielectricChangeListener( customDielectricChangeListener );
-        }
-        if ( material instanceof CustomDielectricMaterial ) {
-            ( (CustomDielectricMaterial) capacitor.getDielectricMaterial() ).addCustomDielectricChangeListener( customDielectricChangeListener );
-        }
-        previousMaterial = material;
+        // rewire dielectric constant observer
+        this.material.removeDielectricConstantObserver( dielectricConstantObserver );
+        this.material = material;
+        this.material.addDielectricConstantObserver( dielectricConstantObserver );
     }
     
     private void handleDielectricConstantChanged() {
