@@ -3,13 +3,12 @@
 package edu.colorado.phet.capacitorlab.model;
 
 import java.awt.Color;
-import java.util.EventListener;
-
-import javax.swing.event.EventListenerList;
 
 import edu.colorado.phet.capacitorlab.CLConstants;
 import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.CLStrings;
+import edu.colorado.phet.common.phetcommon.model.Property;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 
 /**
  * Base class and subclasses for dielectric materials.
@@ -21,13 +20,18 @@ import edu.colorado.phet.capacitorlab.CLStrings;
 public abstract class DielectricMaterial {
     
     private final String name;
-    private double dielectricConstant;
     private final Color color;
+    
+    private final Property<Double> dielectricConstantProperty;
     
     public DielectricMaterial( String name, double dielectricConstant, Color color ) {
         this.name = name;
-        this.dielectricConstant = dielectricConstant;
+        this.dielectricConstantProperty = new Property<Double>( dielectricConstant );
         this.color = color;
+    }
+    
+    public void reset() {
+        dielectricConstantProperty.reset();
     }
     
     public String getName() {
@@ -35,7 +39,19 @@ public abstract class DielectricMaterial {
     }
 
     public double getDielectricConstant() {
-        return dielectricConstant;
+        return dielectricConstantProperty.getValue();
+    }
+    
+    protected void setDielectricConstant( double dielectricConstant ) {
+        dielectricConstantProperty.setValue( dielectricConstant );
+    }
+    
+    public void addDielectricConstantObserver( SimpleObserver o ) {
+        dielectricConstantProperty.addObserver( o );
+    }
+    
+    public void removeDielectricConstantObserver( SimpleObserver o ) {
+        dielectricConstantProperty.removeObserver( o );
     }
     
     public Color getColor() {
@@ -66,53 +82,19 @@ public abstract class DielectricMaterial {
     
     /**
      * A custom dielectric material with mutable dielectric constant.
-     * Listeners are notified when this material changes.
      */
     public static class CustomDielectricMaterial extends DielectricMaterial {
         
-        private final EventListenerList listeners;
-        
         public CustomDielectricMaterial( double dielectricConstant ) {
             super( CLStrings.CUSTOM, dielectricConstant, CLPaints.CUSTOM_DIELECTRIC );
-            listeners = new EventListenerList();
         }
         
-        
         /**
-         * Dielectric constant is mutable for our custom material.
+         * Dielectric constant is mutable for custom materials, so make this method public.
          * @param dielectricConstant
          */
         public void setDielectricConstant( double dielectricConstant ) {
-            if ( dielectricConstant != super.dielectricConstant ) {
-                super.dielectricConstant = dielectricConstant;
-                fireDielectricConstantChanged();
-            }
-        }
-        
-        /**
-         * Show only the custom material's name, not its mutable constant.
-         */
-        @Override
-        public String toString() {
-            return getName();
-        }
-        
-        public interface CustomDielectricChangeListener extends EventListener {
-            public void dielectricConstantChanged();
-        }
-        
-        public void addCustomDielectricChangeListener( CustomDielectricChangeListener listener ) {
-            listeners.add( CustomDielectricChangeListener.class, listener );
-        }
-        
-        public void removeCustomDielectricChangeListener( CustomDielectricChangeListener listener ) {
-            listeners.remove( CustomDielectricChangeListener.class, listener );
-        }
-        
-        private void fireDielectricConstantChanged() {
-            for ( CustomDielectricChangeListener listener : listeners.getListeners( CustomDielectricChangeListener.class ) ) {
-                listener.dielectricConstantChanged();
-            }
+            super.setDielectricConstant( dielectricConstant );
         }
     }
 }
