@@ -1,3 +1,5 @@
+11/17/10 reset custom dielectric material in model.reset
+11/17/10 convert DielectricMaterial to Property<T>
 11/17/10 implement Battery.reset and Capacitor.reset, use them in DielectricModel.reset
 11/17/10 replace Capacitor.plateThickness and plateSideLengthProperty with Capacitor.plateSizeProperty
 11/17/10 terminology change: plateThickness -> plateHeight
